# hypers-crew

./: README.md  pyproject.toml  retargeting_message.md
db/: chroma.sqlite3
knowledge/: catalogue_data.json  customer_data.json  occassion_data.json
src/retargeting_crew/: crew.py  main.py
src/retargeting_crew/config/: agents.yaml  tasks.yaml
