[project]
name = "retargeting_crew"
version = "0.1.0"
description = "retargeting_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
retargeting_crew = "retargeting_crew.main:run"
run_crew = "retargeting_crew.main:run"
train = "retargeting_crew.main:train"
replay = "retargeting_crew.main:replay"
test = "retargeting_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
